[project]
name = "qa-homework16"
version = "0.1.0"
description = ""
authors = [
    {name = "chayko-anna",email = "al.nchko@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "pytest (>=8.3.4,<9.0.0)",
    "selene (>=2.0.0rc9,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.3"

